--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
@@ -15,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
