--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
